add google fonts

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<title>Portfolio</title>
 	<link rel="stylesheet" type = "text/css" href="css/main_style.css">
+	<link href="https://fonts.googleapis.com/css?family=El+Messiri|Pattaya" rel="stylesheet">
 </head>
 <body>
-	<h1>Hello world!!!!!!!!!!!!!!!</h1>
+	<h1>Hello world!</h1>
 	<div id="nav">
 		<ul id="nn">
 			<li><a href="">item 1</a></li>
